experiment with pkgdown

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,7 @@ Description: Compute expected shortfall (ES) and Value at Risk (VaR) from a
     <doi:10.1111/1468-0300.00091>.
 URL: https://github.com/GeoBosh/cvar
 BugReports: https://github.com/GeoBosh/cvar/issues
-Imports: stats, utils, gbutils, Rdpack (>= 0.8)
+Imports: gbutils, Rdpack (>= 0.8)
 RdMacros: Rdpack
 License: GPL (>=2)
 Collate: VaR.R cvar-package.R
