add covr to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,9 @@ matrix:
       osx_image: xcode8.3
 
 
+install:
+  - ./travis-tool.sh github_package jimhester/covr
+ 
+ 
+after_success:
+  - Rscript -e 'covr::coveralls()'
