--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,9 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
 language: r
-cache: packages
-latex: true
 
-matrix:
-  include:
-    - os: linux
-      r: oldrel
-    - os: linux
-      r: release
-    - os: linux
-      r: devel
-    - os: linux
-      dist: trusty
-      env: R_CODECOV=true
-    - os: osx
-      osx_image: xcode8.3
+r_github_packages:
+  - r-lib/covr
 
-
-install:
-  - ./travis-tool.sh github_package jimhester/covr
- 
- 
 after_success:
   - Rscript -e 'covr::coveralls()'
