prepare v. 0.3.0 for CRAN

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: cvar
 Type: Package
 Title: Compute Expected Shortfall and Value at Risk for Continuous Distributions
-Version: 0.2-1
-Date: 2018-09-30
+Version: 0.3-0
+Date: 2018-10-06
 Authors@R: person(given = c("Georgi", "N."), family = "Boshnakov",
                   role = c("aut", "cre"), 
                   email = "georgi.boshnakov@manchester.ac.uk")
@@ -14,9 +14,9 @@ Description: Compute expected shortfall (ES) and Value at Risk (VaR) from a
     done directly from the definitions, see e.g. Acerbi and Tasche (2002)
     <doi:10.1111/1468-0300.00091>. Some support for GARCH models is provided,
     as well.
-URL: https://github.com/GeoBosh/cvar
+URL: https://github.com/GeoBosh/cvar https://geobosh.github.io/cvar/
 BugReports: https://github.com/GeoBosh/cvar/issues
-Imports: gbutils, Rdpack (>= 0.8)
+Imports: gbutils, Rdpack (>= 0.8), fGarch
 RdMacros: Rdpack
 License: GPL (>=2)
 Collate: VaR.R cvar-package.R garch.R
