--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,14 @@ export(VaR_cdf)
 export(VaR_qf)
 export(sim_garch1c1)
 importFrom(Rdpack,reprompt)
+importFrom(fGarch,dged)
+importFrom(fGarch,dstd)
+importFrom(fGarch,pged)
+importFrom(fGarch,pstd)
+importFrom(fGarch,qged)
+importFrom(fGarch,qstd)
+importFrom(fGarch,rged)
+importFrom(fGarch,rstd)
 importFrom(gbutils,cdf2quantile)
 importFrom(stats,quantile)
 importFrom(stats,runif)
