--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,11 @@ matrix:
   include:
     - os: linux
       r: release
-    - os: linux
-      r: devel
+## temporarily commenting out, due to R-devel change on 2020-03-07 raising:
+##     Warning: multiple methods tables found for ‘plot’
+## let's see if that is R's fault.
+##     - os: linux
+##       r: devel
     - os: linux
       dist: trusty
       env: R_CODECOV=true
