--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,3 +1,11 @@
+url: https://geobosh.github.io/cvar
+
+template:
+  bootstrap: 5
+  
+search:
+  exclude: ['news/index.html']
+
 reference:
   - title: "Overview of package cvar"
     contents:
