--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: cvar
 Type: Package
 Title: Compute Expected Shortfall and Value at Risk for Continuous Distributions
-Version: 0.4.1
+Version: 0.4.1.9000
 Authors@R: person(given = c("Georgi", "N."), family = "Boshnakov",
                   role = c("aut", "cre"), 
                   email = "georgi.boshnakov@manchester.ac.uk")
@@ -13,11 +13,11 @@ Description: Compute expected shortfall (ES) and Value at Risk (VaR) from a
     done directly from the definitions, see e.g. Acerbi and Tasche (2002)
     <doi:10.1111/1468-0300.00091>. Some support for GARCH models is provided,
     as well.
-URL: https://github.com/GeoBosh/cvar (devel), https://geobosh.github.io/cvar/ (doc)
+URL: https://geobosh.github.io/cvar/ (doc), https://github.com/GeoBosh/cvar (devel)
 BugReports: https://github.com/GeoBosh/cvar/issues
 Imports: gbutils, Rdpack (>= 0.8), fGarch
 RdMacros: Rdpack
 License: GPL (>=2)
 Collate: VaR.R cvar-package.R garch.R
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.0
 Suggests: testthat, PerformanceAnalytics
